@@ -1,3 +1,11 @@
+2007-06-06  Jakub Jelinek  <jakub@redhat.com>
+
+	[BZ #4586]
+	* sysdeps/i386/ldbl2mpn.c (__mpn_extract_long_double): Treat
+	pseudo-zeros as zero.
+	* sysdeps/x86_64/ldbl2mpn.c: New file.
+	* sysdeps/ia64/ldbl2mpn.c: New file.
+
 2007-07-01  Jakub Jelinek  <jakub@redhat.com>
 
 	* elf/dl-sysdep.c (_dl_important_hwcaps): Add integer overflow check.
